<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


   <item android:id="@+id/group_request" android:title="@string/requests_btn">
  <menu>

      <item
          android:id="@+id/btn_request_id"
          android:title="@string/requests_btn" />

      <item
          android:id="@+id/btn_accepted_request_id"
          android:title="@string/btn_accepted_request" />

      <item
          android:id="@+id/btn_false_request_id"
          android:title="@string/false_requests"/>
  </menu>


   </item>


    <item android:id="@+id/group_car" android:title="@string/car">
        <menu>


    <item
        android:id="@+id/btn_add_car_id"
        android:title="@string/add_car"/>

    <item
        android:id="@+id/btn_edit_car_id"
       android:title="@string/edit_car"/>

    <item
        android:id="@+id/btn_remove_car_id"
       android:title="@string/remove_car" />

    <item
        android:id="@+id/btn_car_info_id"
        android:title="@string/car_info" />

        </menu>
    </item>


    <item
        android:id="@+id/btn_common_cases_id"
        android:title="@string/common_accident" />

    <item
        android:id="@+id/en_id"
        android:title="@string/english"/>
    <item
        android:id="@+id/ar_id"
        android:title="@string/arabic"/>
    <item
        android:id="@+id/btn_logout_id"
        android:title="@string/log_out"/>

</menu>