<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dr_common_cases_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/header_id"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp" />




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header_id">

                <Button
                    android:id="@+id/btn_case_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tc_common"
                    android:layout_marginStart="106dp"
                    android:layout_marginTop="26dp"
                    android:layout_toEndOf="@+id/et_case_name"
                    android:background="@drawable/bg_button_master"
                    android:fontFamily="@font/convergence"
                    android:text="@string/Add_common"
                    android:textAllCaps="false"
                    android:textColor="@color/text2"
                    android:textSize="@dimen/text_size_btn"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/tv_case_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tc_common"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/convergence"
                    android:text="@string/accident_name"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/text_size_tv" />

                <TextView
                    android:id="@+id/tv_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_case_name"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/convergence"
                    android:text="@string/option1"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/text_size_tv" />

                <TextView
                    android:id="@+id/tv_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_case_name"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="50dp"
                    android:layout_toEndOf="@+id/et_option_1"
                    android:fontFamily="@font/convergence"
                    android:text="@string/option2"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/text_size_tv" />

                <TextView
                    android:id="@+id/tv_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_case_name"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="50dp"
                    android:layout_toEndOf="@+id/et_option_2"
                    android:fontFamily="@font/convergence"
                    android:text="@string/option3"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/text_size_tv" />

                <EditText
                    android:id="@+id/et_case_name"
                    android:layout_width="@dimen/width_box_form"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tc_common"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="31dp"
                    android:layout_toEndOf="@+id/tv_case_name"
                    android:accessibilityLiveRegion="assertive"
                    android:background="@drawable/bg_box_form"
                    android:ems="10"
                    android:fontFamily="@font/convergence"
                    android:hint="@string/enter_accident"
                    android:inputType="text"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/text_size"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <EditText
                    android:id="@+id/et_option_1"
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_case_name"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="39dp"
                    android:layout_toEndOf="@+id/tv_option1"
                    android:accessibilityLiveRegion="assertive"
                    android:background="@drawable/bg_box_form"
                    android:ems="10"
                    android:fontFamily="@font/convergence"
                    android:hint="@string/enter_option_1"
                    android:inputType="text"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/text_size"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <EditText
                    android:id="@+id/et_option_2"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_case_name"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="39dp"
                    android:layout_toEndOf="@+id/tv_option2"
                    android:background="@drawable/bg_box_form"
                    android:ems="10"
                    android:fontFamily="@font/convergence"
                    android:hint="@string/enter_option_2"
                    android:inputType="text"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/text_size"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <EditText
                    android:id="@+id/et_option_3"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_case_add"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="39dp"
                    android:layout_toEndOf="@+id/tv_option3"
                    android:background="@drawable/bg_box_form"
                    android:ems="10"
                    android:fontFamily="@font/convergence"
                    android:hint="@string/enter_option_3"
                    android:inputType="text"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/text_size"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/tc_common"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="26dp"
                    android:fontFamily="@font/convergence"
                    android:text="@string/add_common_accident"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/text_size_header_admin" />


                <GridView
                    android:id="@+id/grid_common_cases_id"


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_option_2"
                    android:layout_marginTop="25dp"
                    android:horizontalSpacing="3dp"

                    android:numColumns="auto_fit"
                    android:scrollbarSize="0dp"
                    android:verticalSpacing="3dp" />

            </RelativeLayout>





</RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_side_list_id"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_side_list"
        app:menu="@menu/side_list_navigation"

        />
</androidx.drawerlayout.widget.DrawerLayout>