<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dr_edit_car_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityEditCar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/header_id"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_id">
        <RelativeLayout
            android:id="@+id/te"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btn_edit_information_id"
                android:layout_width="@dimen/width_button_car"
                android:layout_height="@dimen/height_button_car"
                android:layout_below="@+id/et_password_layout_form_edit_id"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_button_master"
                android:fontFamily="@font/convergence"
                android:text="@string/btn_confirmation"
                android:textAllCaps="false"
                android:textColor="@color/text2"
                android:textSize="@dimen/text_size_btn"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_username_edit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_military_name_edit_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/convergence"
                android:text="@string/username_car"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size_tv" />

            <TextView
                android:id="@+id/tv_password_edit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_show_username_edit_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/convergence"
                android:text="@string/hint_password"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size_tv" />

            <TextView
                android:id="@+id/tv_re_password_edit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_show_username_edit_id"
                android:layout_marginStart="275dp"
                android:layout_marginTop="60dp"
                android:layout_toEndOf="@+id/tv_password_edit_id"
                android:fontFamily="@font/convergence"
                android:text="@string/re_password"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size_tv" />

            <EditText
                android:id="@+id/et_military_name_edit_id"
                android:layout_width="@dimen/width_military_name"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_military_name_edit_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:accessibilityLiveRegion="assertive"
                android:background="@drawable/bg_box_form"
                android:ems="10"
                android:fontFamily="@font/convergence"
                android:hint="@string/hint_military_name"
                android:inputType="number"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/et_military_number_edit_id"
                android:layout_width="@dimen/width_box_form"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_military_number_edit_id"
                android:layout_marginStart="42dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/et_military_name_edit_id"
                android:accessibilityLiveRegion="assertive"
                android:autofillHints=""
                android:background="@drawable/bg_box_form"
                android:ems="10"
                android:fontFamily="@font/convergence"
                android:hint="@string/hint_military_number"
                android:inputType="number"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_military_name_edit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_view_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/convergence"
                android:text="@string/military_name"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size_tv" />

            <TextView
                android:id="@+id/tv_military_number_edit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_view_id"
                android:layout_marginStart="220dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@+id/tv_military_name_edit_id"
                android:fontFamily="@font/convergence"
                android:text="@string/military_number"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size_tv" />

            <EditText
                android:id="@+id/et_car_model_edit_id"
                android:layout_width="@dimen/width_box_form"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_car_model_edit_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:accessibilityLiveRegion="assertive"
                android:background="@drawable/bg_box_form"
                android:ems="10"
                android:fontFamily="@font/convergence"
                android:hint="@string/hint_car_model"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/et_car_number_edit_id"
                android:layout_width="@dimen/width_box_form"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_car_number_add_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:accessibilityLiveRegion="assertive"
                android:background="@drawable/bg_box_form"
                android:ems="10"
                android:fontFamily="@font/convergence"
                android:hint="@string/hint_car_number"
                android:inputType="number|text"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_show_username_edit_id"
                android:layout_width="@dimen/width_box_form"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_username_edit_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="35dp"
                android:accessibilityLiveRegion="assertive"
                android:background="@drawable/bg_box_form"
                android:ems="10"
                android:fontFamily="@font/convergence"
                android:hint="@string/hint_car_number"
                android:inputType="number"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_car_name_edit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_edit_car_id"
                android:layout_marginStart="220dp"
                android:layout_marginTop="55dp"
                android:layout_toEndOf="@+id/tv_car_number_add_id"
                android:fontFamily="@font/convergence"
                android:text="@string/car_name"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size_tv" />

            <TextView
                android:id="@+id/tv_car_model_edit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_car_number_edit_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"

                android:layout_marginTop="60dp"
                android:fontFamily="@font/convergence"
                android:text="@string/car_model"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size_tv" />

            <TextView
                android:id="@+id/tv_edit_car_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/convergence"
                android:text="@string/edit_car"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size_header_admin" />

            <TextView
                android:id="@+id/tv_car_number_add_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_edit_car_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="55dp"
                android:fontFamily="@font/convergence"
                android:text="@string/car_number"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size_tv" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_layout_form_edit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_password_edit_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="28dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password_edit_id"
                    android:layout_width="@dimen/width_box_login"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_box_form"
                    android:ems="10"
                    android:fontFamily="@font/convergence"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_re_password_layout_form_edit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_password_edit_id"
                android:layout_marginStart="70dp"
                android:layout_marginTop="28dp"
                android:layout_toEndOf="@+id/et_password_layout_form_edit_id"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_re_password_edit_id"
                    android:layout_width="@dimen/width_box_login"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_box_form"
                    android:ems="10"
                    android:fontFamily="@font/convergence"
                    android:hint="@string/re_password"
                    android:inputType="textPassword"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/et_car_name_edit_id"
                android:layout_width="@dimen/width_box_form"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_car_number_add_id"
                android:layout_marginStart="120dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/et_car_number_edit_id"
                android:accessibilityLiveRegion="assertive"
                android:background="@drawable/bg_box_form"
                android:ems="10"
                android:fontFamily="@font/convergence"
                android:hint="@string/hint_car_name"
                android:inputType="text"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size" />

            <View
                android:id="@+id/line_view_id"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/et_car_model_edit_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="50dp"
                android:background="@color/master" />

            <Button
                android:id="@+id/btn_get_data_edit_id"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/tv_car_number_add_id"
                android:layout_marginStart="18dp"
                android:layout_marginTop="31dp"
                android:layout_toEndOf="@+id/et_car_number_edit_id"
                android:background="@drawable/bg_button_master"
                android:text="@string/btn_get"
                android:textAllCaps="false"
                android:textColor="@color/text2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_car_type_edit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_car_number_edit_id"
                android:layout_marginStart="230dp"
                android:layout_marginTop="60dp"
                android:layout_toEndOf="@+id/tv_car_model_edit_id"
                android:fontFamily="@font/convergence"
                android:text="@string/car_type"
                android:textColor="@color/text1"
                android:textSize="@dimen/text_size_tv" />

            <Spinner
                android:id="@+id/sp_type_car_edit_id"
                android:layout_width="@dimen/width_box_form"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_car_type_edit_id"
                android:layout_marginStart="125dp"
                android:layout_marginTop="30dp"

                android:layout_toEndOf="@+id/et_car_model_edit_id"
                android:background="@drawable/bg_box_form"
                android:entries="@array/type_car" />

        </RelativeLayout>

    </ScrollView>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_side_list_id"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_side_list"
        app:menu="@menu/side_list_navigation"

        />
</androidx.drawerlayout.widget.DrawerLayout>